# AI-Driven-Coaching-Feedback

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  app.py  app_graphql.py  pyproject.toml
.github/workflows/: ci.yml
examples/: sample_transcript.json
scripts/: appsync_deploy.py
src/coach_feedback/: __init__.py  classifier.py  generator.py  schema.py  steps.yaml  templates_loader.py  ui_app.py
src/coach_feedback/asyncapi/: asyncapi.yaml  kafka_bridge.py  mqtt_bridge.py  publisher.py  schemas.py  server.py
src/coach_feedback/audio/: transcribe.py  tts.py
src/coach_feedback/auth/: cognito.py
src/coach_feedback/aws/: appsync_iam.py  bedrock_client.py  config.py  ddb_io.py  s3_io.py
src/coach_feedback/graph/: api.py
src/coach_feedback/llm/: parallel.py  rate.py
src/coach_feedback/pipeline/: voice_feedback.py  voice_feedback_cloud.py
src/coach_feedback/resources/: prompt_classifier.txt  prompt_generator.txt
src/coach_feedback/templates/: feedback_generator.j2  step_classifier.j2
tests/: test_appsync_signer_stub.py  test_asyncapi_handler_import.py  test_asyncapi_server_import.py  test_asyncapi_spec.py  test_auth_stubs.py  test_bedrock_batch_parallel.py  test_bridges_import.py  test_cloud_stubs.py  test_jinja_parallel.py  test_pipeline.py  test_schema.py
